k8s_manifests/project.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: project
