k8s_manifests/wp-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-front
  namespace: project
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: project
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: alexv8288/wordpress_app:v0.0.2
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wp
  namespace: project
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: wp.k8s-3.sa 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-front
                port:
                  number: 80
